--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ a {
     padding: 36px 192px 96px;
 }
 
+.section-padding--extra {
+    padding: 36px 288px 96px;
+}
+
 header, 
 footer {
     background-color: #1f2937;
@@ -118,7 +122,7 @@ h2 {
 }
 
 .figure {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -136,6 +140,7 @@ h2 {
 figcaption {
     font-size: 18px;
     color: #1f2937;
+    text-align: center;
 }
 
 figcaption > a {
